markup mistake correction

--- a/index.html
+++ b/index.html
@@ -28,8 +28,23 @@
                     <img src="img/credit-card.png" alt="">
                     <p>Add Peyment Method</p>
                 </div>
+                <div class="AddPeymentMethod">
+                    <img src="img/credit-card.png" alt="">
+                    <p>Add Peyment Method</p>
+                </div>
+                <div class="AddPeymentMethod">
+                    <img src="img/credit-card.png" alt="">
+                    <p>Add Peyment Method</p>
+                </div>
+                <div class="AddPeymentMethod">
+                    <img src="img/credit-card.png" alt="">
+                    <p>Add Peyment Method</p>
+                </div>
             </div>
-            <button class="btn">Submit</button>
+            <form action="">
+                <button class="btn">Submit</button>
+            </form>
+            
         </div>
 
     </div>
