made a popup window

--- a/index.html
+++ b/index.html
@@ -28,17 +28,10 @@
                     <img src="img/credit-card.png" alt="">
                     <p>Add Peyment Method</p>
                 </div>
-                <div class="AddPeymentMethod">
-                    <img src="img/credit-card.png" alt="">
-                    <p>Add Peyment Method</p>
-                </div>
-                <div class="AddPeymentMethod">
-                    <img src="img/credit-card.png" alt="">
-                    <p>Add Peyment Method</p>
-                </div>
-                <div class="AddPeymentMethod">
-                    <img src="img/credit-card.png" alt="">
-                    <p>Add Peyment Method</p>
+                <div class="popup">
+                    <div class="popup__content">
+                        <span class="close">&times;</span>
+                    </div>
                 </div>
             </div>
             <form action="">
