change of design, working with popup

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 
     <title>Payment method</title>
     <link rel="stylesheet" href="css/normalize.css">
@@ -31,13 +32,30 @@
                 <div class="popup">
                     <div class="popup__content">
                         <span class="close">&times;</span>
+                        <div class="card__image">
+                            <div class="card"></div>
+                        </div>
+                        <div class="card__info">
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt magni architecto
+                                consequatur quaerat est, fuga officia quae quam sunt, itaque laudantium quis, incidunt
+                                minus ea cupiditate facere earum sint. Delectus.</p>
+                            <form action="">
+                                
+
+                                <div class="section__btn">
+                                    <button class="btn__cancel btn-card btn">Cancel</button>
+                                    <button class="btn__submit btn-card btn">Submit</button>
+                                </div>
+                            </form>
+                        </div>
+
                     </div>
                 </div>
             </div>
             <form action="">
                 <button class="btn">Submit</button>
             </form>
-            
+
         </div>
 
     </div>
