--- a/index.html
+++ b/index.html
@@ -36,28 +36,45 @@
                             <div class="card"></div>
                         </div>
                         <div class="card__info">
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt magni architecto
-                                consequatur quaerat est, fuga officia quae quam sunt, itaque laudantium quis, incidunt
-                                minus ea cupiditate facere earum sint. Delectus.</p>
-                            <form action="">
-                                
-
+                            <form action="#" method="post">
+                                <div class="form__row row1">
+                                    <div class="form-group first-form">
+                                        <label for="card_holder">Name:</label>
+                                        <input type="text" id="card_holder" name="card_holder"
+                                            placeholder="Имя на карте" required>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="expiry_date">Expiration:</label>
+                                        <input type="text" id="expiry_date" name="expiry_date" placeholder="MM/YY"
+                                            pattern="(0[1-9]|1[0-2])\/?([0-9]{2}|[0-9]{4})" required>
+                                    </div>
+                                </div>
+                                <div class="form__row row2">
+                                    <div class="form-group first-form">
+                                        <label for="card_number">Card number:</label>
+                                        <input type="text" id="card_number" name="card_number"
+                                            placeholder="XXXX XXXX XXXX XXXX"
+                                            pattern="[0-9]{4} [0-9]{4} [0-9]{4} [0-9]{4}" required>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="cvv">CVV:</label>
+                                        <input type="text" id="cvv" name="cvv" placeholder="XXX" pattern="[0-9]{3}"
+                                            required>
+                                    </div>
+                                </div>
                                 <div class="section__btn">
-                                    <button class="btn__cancel btn-card btn">Cancel</button>
-                                    <button class="btn__submit btn-card btn">Submit</button>
+                                    <button class="btn__cancel btn-card btn" type="reset">Cancel</button>
+                                    <button class="btn__submit btn-card btn" type="submit">Submit</button>
                                 </div>
                             </form>
                         </div>
-
                     </div>
                 </div>
             </div>
-            <form action="">
-                <button class="btn">Submit</button>
+            <form action="#" method="post">
+                <button class="btn" type="submit">Submit</button>
             </form>
-
         </div>
-
     </div>
     <script src="js/script.js"></script>
 </body>
