--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
                 <a href="#" class="thisPage">Payment method</a>
             </div>
             <h1>Choose your payment method</h1>
+
+            <div id="new__card">
+                    
+            </div>
             <div class="PaymentMethod">
                 <div class="AddPeymentMethod">
                     <img src="img/credit-card.png" alt="">
@@ -36,7 +40,7 @@
                             <div class="card"></div>
                         </div>
                         <div class="card__info">
-                            <form action="#" method="post">
+                            <form action=" ">
                                 <div class="form__row row1">
                                     <div class="form-group first-form">
                                         <label for="card_holder">Name:</label>
@@ -64,14 +68,15 @@
                                 </div>
                                 <div class="section__btn">
                                     <button class="btn__cancel btn-card btn" type="reset">Cancel</button>
-                                    <button class="btn__submit btn-card btn" type="submit">Submit</button>
+                                    <button class="btn__submit btn-card btn" id="submit_card">Submit</button>
                                 </div>
                             </form>
                         </div>
                     </div>
                 </div>
             </div>
-            <form action="#" method="post">
+
+            <form action=" ">
                 <button class="btn" type="submit">Submit</button>
             </form>
         </div>
