--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                                     </div>
                                 </div>
                                 <div class="section__btn">
-                                    <button class="btn__cancel btn-card btn" type="reset">Cancel</button>
+                                    <button class="btn__cancel btn-card btn" id="cancel__card" type="reset">Cancel</button>
                                     <button class="btn__submit btn-card btn" id="submit_card">Submit</button>
                                 </div>
                             </form>
